--- a/vignettes/00_meta_analysis.Rmd
+++ b/vignettes/00_meta_analysis.Rmd
@@ -442,6 +442,122 @@ par(mar=c(5.1, 4.1, 4.1, 2.1))
 ```
 
 
+
+
+
+```{r fig.width=18,fig.height=12}
+# ```{r fig.width=20, fig.height=12}
+
+layout_mat = rbind(
+rbind(
+       c(1,1,1,1,1,1,1,1),
+       c(1,1,1,1,1,1,1,1),
+       c(1,1,1,1,1,1,1,1),
+       matrix(2:9,1),
+       matrix(10:17,1),
+       matrix(18:25,1)  
+     )
+)
+
+# layout_mat = cbind(
+#   matrix(1, nrow=6, ncol=6),
+#   rbind(
+#     matrix(2:9,2),
+#     matrix(10:17,2),
+#     matrix(18:25,2)
+#   )
+# )
+
+layout_mat
+
+
+# pdf("utest_pval.pdf", width=9, height = 18)
+layout(layout_mat, respect=TRUE)
+
+plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,60), xlab="up/down-strean TSS window size", ylab="methplusplus enrichment Mann-Whitney", xaxt="n")
+axis(1,at=ud_strs, label=ud_strs)
+for (i in 1:length(gses)) {
+  gse = gses[i]
+  points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
+       col=i+1, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
+  for (feature_pretreatment in feature_pretreatments) {
+    for (reducer_func2_name in reducer_func2_names) {
+      tmp_idx = stats$reducer_func2_name==reducer_func2_name & stats$feature_pretreatment==feature_pretreatment
+      lines(stats[tmp_idx,]$ud_str, -log10(stats[tmp_idx, paste0("utest_pval_",gse)]), 
+        pch=ifelse(reducer_func2_name=="mean", 1, 2),
+        lty=ifelse(feature_pretreatment=="raw", 1, 2),
+        col=i+1
+      )
+    }
+  }
+} 
+# legend("topleft",
+#   c(gses, "method raw", "method centered", "method mean", "method max"),
+#   col=c((1:length(gses))+1, 1, 1, 1, 1),
+#   lty=c(rep(1, length(gses)), 1:2, 0,0),
+#   pch=c(rep(NA, length(gses)), NA,NA, 1,2)
+# )
+
+legend("topleft", 
+  c(gses, "method mean", "method max"), 
+  col=c((1:length(gses))+1, 1, 1), 
+  lty=c(rep(1, length(gses)), 0,0), 
+  pch=c(rep(NA, length(gses)), 1,2)
+)
+
+my_et_gsea_plot = function(expression_vector, gene_set, prefix, nperm=1000, PLOT_GSEA=FALSE, main="", XAXIS=TRUE, YAXIS=TRUE, ...) {
+  utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
+  main = paste0(main, " mw_pv:", signif(utest$p.value, 3))
+  boxplot(rank(expression_vector)~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), main=main,
+    ylab="", #paste0("rank(l2fc)"), 
+    xlab="", yaxt="n", xaxt=ifelse(XAXIS, "s","n"), ...)
+    if (YAXIS) {
+      axis(2, at=c(0,length(expression_vector)), labels=c(0,length(expression_vector)))  
+      axis(2, at=length(expression_vector)/2, labels="rank", tick=FALSE)        
+    }
+  
+}
+
+for (i in 1:length(gses)) {
+  par(mar=c(2, 2, 1.3, 0))    
+  for (reducer_func2_name in reducer_func2_names) {
+    for  (ud_str in ud_strs){
+      gse = gses[i]
+      feats_filename = paste0("feats_raw_", ud_str, "_0_", reducer_func2_name, ".xlsx")
+      feats = mread.xlsx(feats_filename)
+      rownames(feats) = feats$gene_symbol
+      #head(feats)
+      #gse = gses[i]
+      #model = models[i]    
+      gene_set = rownames(feats)[feats[["methplusplus"]]]
+      expression_vector = feats[,paste0("l2fc_", gse)]
+      names(expression_vector) = rownames(feats)
+      expression_vector = expression_vector[!is.na(expression_vector)]
+      my_et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE, 
+        col=adjustcolor(c(i+1, 1), alpha.f=.5),
+        main=paste0(ud_str, " " , reducer_func2_name),
+        YAXIS=ud_str==min(ud_strs),
+        XAXIS=i==length(gses)&reducer_func2_name==rev(reducer_func2_names)[1]
+      )
+    }
+  } 
+}
+# dev.off()
+
+par(mar=c(5.1, 4.1, 4.1, 2.1))    
+
+
+```
+
+
+
+
+
+
+
+
+
+
 ```{r, echo=FALSE, results="verbatim", eval=FALSE}
 knitr::kable(inter)
 ```
