--- a/vignettes/02_mapreduce_max.Rmd
+++ b/vignettes/02_mapreduce_max.Rmd
@@ -101,7 +101,7 @@ if (!exists("gene_indexed_probes")) {
     # print(gene)
     chr = gene[[1]]
     meth_platform = chrs_indexed_methpf[[chr]]
-    ret = dmprocr::get_probe_names(gene, meth_platform, pf_chr_colname, pf_pos_colname, up_str, dwn_str) 
+    ret = dmprocr_get_probe_names(gene, meth_platform, pf_chr_colname, pf_pos_colname, up_str, dwn_str) 
     return(ret)
   })
   barplot(table(sapply(gene_indexed_probes, length)))
