--- a/vignettes/01_tss_cpg_status.Rmd
+++ b/vignettes/01_tss_cpg_status.Rmd
@@ -93,6 +93,7 @@ if (!file.exists(seq_filename)) {
   seq = get_seq_from_bed(feats, up_str, dwn_str, hg38_chrom_sizes)
   saveRDS(seq, seq_filename)
 }
+seq = readRDS(seq_filename)
 length(seq)
 
 # for (seq_filename in c(
