--- a/vignettes/04_results.Rmd
+++ b/vignettes/04_results.Rmd
@@ -15,6 +15,7 @@ output:
 
 ```{r, echo=FALSE, eval=TRUE}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
+source("params.R")
 ```
 
 ```{r}
